@@ -5303,31 +5303,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
-name|newDirectory
-argument_list|(
-name|r
-argument_list|,
-literal|true
-argument_list|)
-return|;
-block|}
-comment|/**    * Returns a new Directory instance, using the specified random. You    * can specify maybeWrap as to whether the directory might be also    * wrapped by NRTCachingDirectory or FileSwitchDirectory    * See {@link #newDirectory()} for more information.    */
-DECL|method|newDirectory
-specifier|public
-specifier|static
-name|MockDirectoryWrapper
-name|newDirectory
-parameter_list|(
-name|Random
-name|r
-parameter_list|,
-name|boolean
-name|maybeWrap
-parameter_list|)
-throws|throws
-name|IOException
-block|{
 name|Directory
 name|impl
 init|=
@@ -5346,16 +5321,12 @@ name|MockDirectoryWrapper
 argument_list|(
 name|r
 argument_list|,
-name|maybeWrap
-condition|?
 name|maybeNRTWrap
 argument_list|(
 name|r
 argument_list|,
 name|impl
 argument_list|)
-else|:
-name|impl
 argument_list|)
 decl_stmt|;
 name|stores
@@ -5403,8 +5374,6 @@ argument_list|(
 name|random
 argument_list|,
 name|d
-argument_list|,
-literal|true
 argument_list|)
 return|;
 block|}
@@ -5442,36 +5411,6 @@ name|f
 parameter_list|,
 name|LockFactory
 name|lf
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-return|return
-name|newFSDirectory
-argument_list|(
-name|f
-argument_list|,
-name|lf
-argument_list|,
-literal|true
-argument_list|)
-return|;
-block|}
-comment|/** Returns a new FSDirectory instance over the given file, which must be a folder. */
-DECL|method|newFSDirectory
-specifier|public
-specifier|static
-name|MockDirectoryWrapper
-name|newFSDirectory
-parameter_list|(
-name|File
-name|f
-parameter_list|,
-name|LockFactory
-name|lf
-parameter_list|,
-name|boolean
-name|maybeWrap
 parameter_list|)
 throws|throws
 name|IOException
@@ -5577,16 +5516,12 @@ name|MockDirectoryWrapper
 argument_list|(
 name|random
 argument_list|,
-name|maybeWrap
-condition|?
 name|maybeNRTWrap
 argument_list|(
 name|random
 argument_list|,
 name|fsdir
 argument_list|)
-else|:
-name|fsdir
 argument_list|)
 decl_stmt|;
 if|if
@@ -5657,9 +5592,6 @@ name|r
 parameter_list|,
 name|Directory
 name|d
-parameter_list|,
-name|boolean
-name|maybeWrap
 parameter_list|)
 throws|throws
 name|IOException
@@ -5710,16 +5642,12 @@ name|MockDirectoryWrapper
 argument_list|(
 name|r
 argument_list|,
-name|maybeWrap
-condition|?
 name|maybeNRTWrap
 argument_list|(
 name|r
 argument_list|,
 name|impl
 argument_list|)
-else|:
-name|impl
 argument_list|)
 decl_stmt|;
 name|stores
