@@ -563,7 +563,6 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
-comment|// TODO: why does this test trigger NRTCachingDirectory's assert?
 name|Directory
 name|directory
 init|=
@@ -572,8 +571,6 @@ argument_list|(
 name|indexDir
 argument_list|,
 literal|null
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|IndexWriter
@@ -768,7 +765,6 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
-comment|// TODO: why does this test trigger NRTCachingDirectory's assert?
 name|directory
 operator|=
 name|newFSDirectory
@@ -776,8 +772,6 @@ argument_list|(
 name|indexDir
 argument_list|,
 literal|null
-argument_list|,
-literal|false
 argument_list|)
 expr_stmt|;
 name|writer
